[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altinn3-test-lib"
version = "0.0.3"
authors = [
    { name="Anders Hagen", email="nhk@ssb.no" },
    { name="Rannveig Aasen", email="rsa@ssb.no" }
]
description = "A POC project for modular test tools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
